# skytrace

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  app.py  pyproject.toml  requirements-local.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GAPS.md
docs/design/: 2026-07-11-air-tracking-demo-design.md
docs/superpowers/specs/: 2026-07-11-air-tracking-demo-design.md
scripts/: airtrack312.cmd  build_gallery.py  fetch_samples.py  run_local.ps1  setup_local.ps1  skytrace312.cmd
skytrace/: __init__.py  cli.py  config.py  pipeline.py  roboflow_http.py  samples.py
tests/: test_normalize.py
