[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skytrace"
version = "0.1.0"
description = "Airborne object detection and multi-object tracking with Roboflow Supervision"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SkyTrace contributors" }]
keywords = [
  "computer-vision",
  "object-tracking",
  "supervision",
  "airplane",
  "drone",
  "yolo",
  "roboflow",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "supervision>=0.26.0",
  "ultralytics>=8.3.0",
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "pillow>=10.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
local = [
  "inference>=0.36.0",
  "trackers>=2.0.0",
  "roboflow>=1.1.0",
  "gradio>=4.44.0",
  "imageio>=2.34.0",
]
ui = ["gradio>=4.44.0"]
dev = ["pytest>=8.0.0", "imageio>=2.34.0"]

[project.scripts]
skytrace = "skytrace.cli:main"

[tool.setuptools.packages.find]
include = ["skytrace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
